--- a/src/NBT.WebUI.Client/wwwroot/index.html
+++ b/src/NBT.WebUI.Client/wwwroot/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NBT.WebUI.Client</title>
+    <title>NBT Registration System</title>
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
     <link href="NBT.WebUI.Client.styles.css" rel="stylesheet" />
 </head>
 
@@ -26,6 +27,7 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
