--- a/src/NBT.WebUI/wwwroot/index.html
+++ b/src/NBT.WebUI/wwwroot/index.html
@@ -24,5 +24,6 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/file-download.js"></script>
 </body>
 </html>
